--- a/essaigit.html
+++ b/essaigit.html
@@ -7,5 +7,6 @@
 <body>
 	<p>Il y a du text ici</p>
 	<p>Je viens d'ajoute encore du texte</p>
+	<p>Je viens d'ajoute encore du texte avec ADDTEXT</p>
 </body>
 </html>
