ajout du text avec ADDAGAINTEX

--- a/essaigit.html
+++ b/essaigit.html
@@ -8,5 +8,6 @@
 	<p>Il y a du text ici</p>
 	<p>Je viens d'ajoute encore du texte</p>
 	<p>Je viens d'ajoute encore du texte avec ADDTEXT</p>
+	<p>Je viens d'ajoute encore du texte avec ADDAGAINTEXT</p>
 </body>
 </html>
