Ajout de ADDTEXT

--- a/essaigit.html
+++ b/essaigit.html
@@ -9,5 +9,8 @@
 	<p>Je viens d'ajoute encore du texte</p>
 	<p>Je viens d'ajoute encore du texte avec ADDTEXT</p>
 	<p>Je viens d'ajoute encore du texte avec ADDAGAINTEXT</p>
+	<p>ADDTEXT</p>
+
+	
 </body>
 </html>
